--- a/LwsAuthUI/LwsAuthUI.csproj
+++ b/LwsAuthUI/LwsAuthUI.csproj
@@ -238,6 +238,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\PublishProfiles\LwsAuthUI - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\LwsAuthUI - Web Deploy1.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
