Add role security

--- a/LwsAuthUI/LwsAuthUI.csproj
+++ b/LwsAuthUI/LwsAuthUI.csproj
@@ -211,6 +211,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\MainOnlyController.cs" />
+    <Compile Include="Controllers\Api\OfficeOnlyController.cs" />
     <Compile Include="Controllers\Api\SecureApiController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
